--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.583.0",
     "@heroicons/react": "^2.1.3",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.2",
+    "@supabase/supabase-js": "^2.43.4",
+    "aws-sdk": "^2.1631.0",
     "date-fns": "^3.6.0",
+    "google-auth-library": "^9.10.0",
     "next": "14.2.3",
     "react": "^18",
     "react-calendar": "^5.0.0",
